--- a/templates/results.html
+++ b/templates/results.html
@@ -13,9 +13,9 @@
 <div class="main-text">
     {% for key, val in profDict.items() %}
         {% for i in range(val['room'] | length) %}
-        <p>Instructor: {{key}}, Class #: {{val['class number'][i]}}</p>
-        <p>RateMyProfessor Data: Overall Rating - {{val['RMPRating']}}, Number of Reviews - {{val['numReviews']}}</p>
-        <p> Meeting Times and Location: {{val['days/times'][i]}}, {{val['room'][i]}}</p>
+        <p><b>Instructor</b>: {{key}}, <b>Class #</b>: {{val['class number'][i]}}</p>
+        <p><b>RateMyProfessor Data</b>: Overall Rating - {{val['RMPRating']}}, Number of Reviews - {{val['numReviews']}}</p>
+        <p><b>Meeting Times and Location</b>: {{val['days/times'][i]}}, {{val['room'][i]}}</p>
         <br>
         {% endfor %}
     {% endfor %}
